logs/Slang/generic/typedef/typedef_test_5.sv.log
name: typedef_test_5
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_5.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_5.sv:7:9: error: language feature not yet supported
typedef union { int i; bool b; } bint;
        ^~~~~~~~~~~~~~~~~~~~~~~~
